@@ -1,3 +1,7 @@
+  These installation instructions are for Microsoft Windows using
+  the Visual C++ (Visual Studio, etc.) IDE.  For building using
+  the free Cygwin or MinGW compilers, follow the instructions in
+  INSTALL-unix.txt.
 
 IMPORTANT NOTES
 
