@@ -1,7 +1,7 @@
 #
 # Makefile for Magick++ library
 #
-# Copyright Bob Friesenhahn, 1999, 2000, 2001, 2002, 2003
+# Copyright Bob Friesenhahn, 1999, 2000, 2001, 2002, 2003, 2004
 #
 AUTOMAKE_OPTIONS = 1.8 nostdinc
 
@@ -14,6 +14,8 @@ pkgdatadir = $(datadir)/Magick++
 pkglibdir = $(libdir)/Magick++
 pkgincludedir = $(includedir)/Magick++
 
+AM_CXXFLAGS=$(LTCXXLIBOPTS)
+
 lib_LTLIBRARIES    = libGraphicsMagick++.la
 
 LIBRARY_CURRENT    = @MAGICK_PLUS_PLUS_LIBRARY_CURRENT@
@@ -25,7 +27,6 @@ libGraphicsMagick___la_SOURCES = \
 	Exception.cpp Functions.cpp Geometry.cpp Image.cpp ImageRef.cpp \
 	Montage.cpp Options.cpp Pixels.cpp STL.cpp Thread.cpp TypeMetric.cpp
 
-# Add -no-undefined once Cygwin supports throwing C++ exceptions from DLLs.
 libGraphicsMagick___la_LDFLAGS = \
 	-version-info $(LIBRARY_CURRENT):$(LIBRARY_REVISION):$(LIBRARY_AGE)
 
