@@ -20,6 +20,11 @@
 <b><font face="Helvetica, Arial"><font color="#FFFFFF"><font size="+1">GraphicsMagick Windows Installation</font></font></font></b></td>
 </tr>
 </table>
+<p>
+  These installation instructions are for Microsoft Windows using
+  the Visual C++ (Visual Studio, etc.) IDE.  For building using
+  the free Cygwin or MinGW compilers, follow the instructions in
+  INSTALL-unix.txt.
 
 <p>
 <STRONG>IMPORTANT NOTES</STRONG>
